# marketplace_megano

./: .gitignore  Dockerfile  README.md  categories.json  category_image.json  docker-compose.prod.yaml  docker-compose.yaml  order.json  order_count_product.json  product.json  product_image.json  product_review.json  product_sale.json  product_specification.json  product_tag.json  profiles.json  profiles_avatar.json  pyproject.toml  requirements.txt
marketplace/cart/: cart.py  serializers.py  urls.py  views.py
marketplace/catalog/: admin.py  filters.py  models.py  serializers.py  views.py
marketplace/catalog/migrations/: 0001_initial.py  0002_remove_categoryimage_category.py
marketplace/marketplace/: settings.py  urls.py
marketplace/orders/: admin.py  models.py  serializers.py  urls.py  views.py
marketplace/orders/migrations/: 0001_initial.py
marketplace/products/: admin.py  models.py  serializers.py  urls.py  views.py
marketplace/products/migrations/: 0001_initial.py
marketplace/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
marketplace/profiles/migrations/: 0001_initial.py
marketplace/static/frontend/assets/js/: app.js
nginx/: nginx.conf
nginx-1.25.4/conf/: nginx.conf
